k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vechtron-ui
  namespace: vechtron-webapp
  labels:
    app: vechtron-ui
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: vechtron-ui
  strategy:
    type: RollingUpdate 
  template: 
    metadata: 
      labels: 
        app: vechtron-ui
        namespace: vechtron-webapp
    spec: 
      containers:
        - name:  vechtron-ui
          image: 381491932875.dkr.ecr.us-east-2.amazonaws.com/vechtronai-webapp-prod:<version>
          ports:
          - containerPort: 3000
            name: vechtron
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
