k8s/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vechtron-ui
  namespace: vechtron-webapp
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: vechtron-ui
